Small fixes, icon, add nowrap for menu, vertical align menu

--- a/web/new-ui/main.css
+++ b/web/new-ui/main.css
@@ -14,8 +14,8 @@
 }
 
 * {
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
 }
 
 p {
@@ -30,7 +30,7 @@ a {
     color: #fff;
 }
 
-a:hover{
+a:hover {
     text-decoration: none;
     color: #fff;
 }
@@ -51,16 +51,17 @@ a:hover{
     background-repeat: no-repeat;
     border-radius: 0;
     border: none;
-    padding: .5rem 0 0 3rem;
+    padding-left: 3rem;
     align-items: stretch;
 }
 
-.nav-link{
+.nav-link {
     font-weight: normal;
     text-transform: uppercase;
     font-family: 'Franklin Gothic Medium', arial;
     font-size: 1.1rem;
     font-stretch: ultra-condensed;
+    white-space: nowrap;
     color: #fff !important;
 }
 
@@ -80,7 +81,7 @@ a:hover{
     height: 100%;
 }
 
-.red-block{
+.red-block {
     width: 100%;
     background-color: red;
     color: white;
@@ -133,7 +134,7 @@ a:hover{
     font-size: .94rem;
 }
 
-.footer-links{
+.footer-links {
     margin: 10px;
 }
 
@@ -142,7 +143,7 @@ a:hover{
 }
 
 .footer-second-logo {
-     margin-bottom: 15px;
+    margin-bottom: 15px;
 }
 
 .footer-main-logo, .footer-second-logo {
@@ -164,7 +165,7 @@ a:hover{
 }
 
 .footer .social-link .img-icon {
-    width: 48px;
+    width: 40px;
 }
 
 .footer .social-link + .social-link {
@@ -178,7 +179,7 @@ a:hover{
     margin-bottom: 50px;
 }
 
-.section-header{
+.section-header {
     background: url(image/top-header.png) no-repeat;
     background-size: cover;
     padding: 25px 0;
@@ -195,15 +196,15 @@ a:hover{
     margin: auto;
 }
 
-.info-block-pos{
+.info-block-pos {
     margin-top: 30px;
     margin-bottom: 20px;
 }
 
 /* card */
-.card{
+.card {
     margin: 20px auto;
-    border:none;
+    border: none;
 }
 
 .card:hover .card-desc {
@@ -277,12 +278,11 @@ a:hover{
     line-height: 1.12;
 }
 
-
 .line {
-    border: none; 
-    background-color: #4564a0; 
-    color: #4564a0; 
-    height: 12px; 
+    border: none;
+    background-color: #4564a0;
+    color: #4564a0;
+    height: 12px;
 }
 
 .partner-block-pos {
@@ -290,124 +290,137 @@ a:hover{
     margin-bottom: 50px;
 }
 
-
 /* exclusive-offer */
-.ex-off-pdf-link{
+.ex-off-pdf-link {
     display: flex;
 }
-.ex-off-pdf-link-text{
+
+.ex-off-pdf-link-text {
     color: #2b519c;
     margin-bottom: 0;
 }
-.ex-off-share-link{
+
+.ex-off-share-link {
     display: flex;
     float: right;
 }
-.ex-off-leftside, .ex-off-rightside{
+
+.ex-off-leftside, .ex-off-rightside {
     margin-top: 100px;
     margin-bottom: 70px;
 }
-.ex-off-container-pos{
+
+.ex-off-container-pos {
     margin: 80px 40px 50px 40px;
 }
 
-
-
 /* about-company */
-.ab-com-container-pos{
+.ab-com-container-pos {
     margin: 40px 20px 25px 20px;
 }
-.company-column-img-size{
+
+.company-column-img-size {
     border-radius: 50%;
 }
-.about-company-heading{
+
+.about-company-heading {
     font-size: 25px;
     font-weight: 400;
 }
 
-
-
-
-
 /* contacts */
-.brands-block{
+.brands-block {
     border-top: 2px solid #c4c2c2;
     margin-top: 10px;
 
 }
-.col-left-brand-block{
+
+.col-left-brand-block {
     margin-top: 10px;
     width: 25%;
 }
-.col-right-brand-block{
+
+.col-right-brand-block {
     width: 75%;
-    margin-left:30px;
+    margin-left: 30px;
 }
-.brand-logo{
+
+.brand-logo {
     margin-top: 10px;
     border-bottom: 2px solid #c4c2c2;
-    
+
 }
-.brand-position{
+
+.brand-position {
     margin-bottom: 10px;
     margin-right: 10px;
 }
-#brand-text{
+
+#brand-text {
     margin-top: 10px;
     font-size: 12px;
     color: #3f5095;
 }
-#brand-logo-text{
+
+#brand-logo-text {
     font-size: 12px;
 }
-.addres-block{
+
+.addres-block {
     margin-top: 20px;
 }
-.addres-text-style{
+
+.addres-text-style {
     margin-bottom: 0;
 }
-.number-block{
+
+.number-block {
     width: 50%;
     display: flex;
     position: relative;
 }
-.contact-container-pos{
+
+.contact-container-pos {
     margin-left: 110px;
     margin-top: 50px;
     margin-bottom: 20px;
 }
-.contact-title{
+
+.contact-title {
     margin-top: 70px;
     margin-left: 110px;
     color: #484848;
     font-weight: 400;
 }
-.img-contact-pos{
+
+.img-contact-pos {
     position: absolute;
-    top:0;
-}
-.phone-number{
-    margin-left: 55px;
-}
-.img-contact-style{
-    align-self: center;
-    margin-right: 15px;
-    
+    top: 0;
 }
 
-@media (max-width:1100px){
+.phone-number {
+    margin-left: 55px;
+}
+
+.img-contact-style {
+    align-self: center;
+    margin-right: 15px;
+
+}
+
+@media (max-width: 1100px) {
     .navbar-logo {
         width: 110px;
     }
 }
 
-@media (max-width:1200px) and (min-width: 992px) {
+@media (max-width: 1200px) and (min-width: 992px) {
     .card-example .card-text {
         font-size: .9rem;
     }
 }
 
-@media (max-width:992px){
+@media (max-width: 992px) {
 
     .navbar-logo {
         width: 130px;
@@ -419,7 +432,7 @@ a:hover{
     }
 }
 
-@media (max-width:768px){
+@media (max-width: 768px) {
     .card .card-desc {
         top: 0;
     }
@@ -435,19 +448,19 @@ a:hover{
     }
 }
 
-@media (min-width: 1030px){
+@media (min-width: 1030px) {
     html {
         font-size: 16px;
     }
 }
 
-@media (min-width: 1250px){
+@media (min-width: 1250px) {
     html {
         font-size: 18px;
     }
 }
 
-@media (min-width: 1500px){
+@media (min-width: 1500px) {
     html {
         font-size: 20px;
     }
@@ -458,7 +471,6 @@ a:hover{
         font-size: 24px;
     }
 }
-
 
 @media (min-width: 1600px) {
     .container {
